Change the image of presentation

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							</div>
 
 							<h3>What I Do</h3>
-							<p>I am a developer </p>
+							<p>I am a passionate web and application developer.I learn good practices, new languages ​​or new methods every day. </p>
 							<div id="corner-br" class="corner">
 
 							</div>
@@ -85,8 +85,8 @@
 			<div class="about-wrapper">
 				<div class="about-me">
 					<h5>More about me</h5>
-					<p>I am a passionate web and application developer.I learn good practices, new languages ​​or new methods every day.</p>
-					<p> after two years of work-study experience I am looking for a work-study company that will allow me to continue my work-study studies and acquire other skills.</p>
+					
+					<p> After two years of work-study experience I am looking for a work-study company that will allow me to continue my work-study studies and acquire other skills.</p>
 
 					<hr>
 
@@ -113,7 +113,7 @@
 
 				</div>
 				<div class="social-link">
-					<img id="social_img" src="images/index.jpg" alt="">
+					<img id="social_img" src="images/social.png" alt="">
 					<h3>Find me on Linkedin & Github</h3>
 					<a target="_blank" href="https://www.linkedin.com/in/ahmed-alidjinou-5055a0145"> Linkedin: ahmed-alidjinou</a>
 					<br>
